--- a/assets/style/flex.css
+++ b/assets/style/flex.css
@@ -14,6 +14,7 @@
     row-gap: .5rem;
 }
 
+/* DESTAQUES */
 .destaques {
     display: flex;
     align-items: center;
@@ -24,6 +25,24 @@
 .destaques__barra {
     flex-grow: 1;
 }
+
+/* EVENTOS */
+
+.eventos__lista {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 1.5rem;
+    row-gap: 1rem;
+    justify-content: center;
+}
+
+.eventos__item {
+    flex-grow: 1;
+    display: grid;
+    gap: .5rem;
+    max-width: 400px;
+}
+
 
 @media (min-width: 720px) {
     /* CABEÇALHO */
@@ -36,6 +55,10 @@
        flex-wrap: wrap;
        column-gap: 1.5rem;
        row-gap: 1rem;
+    }
+
+    .eventos__lista {
+        justify-content: end;
     }
 }
 
