--- a/assets/style/grid.css
+++ b/assets/style/grid.css
@@ -11,7 +11,75 @@
     grid-area: 2 / 2 / 4 / 3;
 }
 
+/* EVENTOS */
+.eventos__item {
+    display: grid;
+    flex-grow: 1;
+    max-width: 400px;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: auto repeat(2, 1fr) auto;
+    grid-template-areas: 
+    "imagem imagem"
+    "nome   nome"
+    "data   data"
+    "local  botao";
+}
+
+.eventos__item img {
+    grid-area: imagem;
+}
+
+.eventos__item h3 {
+    grid-area: nome;
+    align-self: center;
+}
+
+.eventos__item h4 {
+    grid-area: data;
+}
+
+.eventos__item h5 {
+    grid-area: local;
+    align-self: center;
+}
+
+.eventos__item button {
+    grid-area: botao;
+    justify-self: end;
+}
+
+/* AGENDA */
+.agenda__item {
+    flex-grow: 1;
+    display: grid;
+    grid-template-rows: auto 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 
+    "imagem imagem"
+    "horario titulo";
+
+    img {
+        grid-area: imagem;
+    }
+
+    .agenda__informacoes {
+        grid-area: horario;
+        display: flex;
+        flex-direction: column;
+        gap: .5rem;
+      
+    }
+
+    .agenda__atracao {
+        grid-area: titulo;
+    }
+}
+
 @media (min-width: 720px) {
+    .banner {
+        grid-template-columns: calc(50% - .75rem) auto auto;
+    }
+
     .banner img:nth-child(1) {
         grid-area: 1 / 1 / 3 / 2;  
     }
